<resources>
    <string name="app_name">GamerFinder</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_signup_now">Signup Now</string>
    <string name="btn_login_now">Login Now</string>
    <string name="et_password">Password</string>
    <string name="img_lock">lock</string>
    <string name="et_email">Email</string>
    <string name="img_account">account</string>
    <string name="txt_login">Login</string>
    <string name="img_logo">logo</string>
    <string name="txt_remember_me">Remember me?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="GamerFinder">GamerFinder</string>
    <string name="tv_SignUp">SignUp</string>
    <string name="btn_SignUp">SignUp</string>
    <string name="Terms_SignUp">By signing up you agree our Terms of use Privacy Police</string>
    <string name="Already_SignUp">Already have an account?</string>
    <string name="btn_Sign_in">Sign in now</string>
    <string name="remember_me">Remember me?</string>
    <string name="btn_facebook">btn_facebook</string>
    <string name="btn_google">btn_google</string>
    <string name="btn_instegram">btn_instegram</string>
    <string name="whiteline1">whiteline</string>
    <string name="whiteline2">whiteline</string>
    <string name="whiteline3">whiteline</string>
    <string name="whiteline4">whiteline</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="et_aboutyourself">About my self ...</string>
    <string name="et_country">Country</string>
    <string name="et_age">Age</string>
    <string name="et_nickname">NickName</string>
    <string name="txt_details">Details</string>
    <string name="btn_done">Done</string>
    <string name="txt_favorite_games">Favorite Games</string>
    <string name="txt_favorite_platform">Favorite Platform</string>
    <string name="btn_restore">Restore</string>
    <string name="btn_send">Send</string>
    <string name="et_password_confirm">Confirm Password</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="f_settings">Settings</string>
    <string name="f_friends">Friends</string>
    <string name="f_favorite">Favorite</string>
    <string name="f_home">Home</string>
</resources>
