<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background"
    tools:context="com.orelandshadi.gamerfinder.ui.login.LoginActivity">


    <!--logo Image view -->
    <ImageView
        android:id="@+id/imgView_logo"
        android:layout_width="250dp"
        android:layout_height="188dp"
        android:layout_centerHorizontal="true"
        android:paddingTop="65dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo1" />

    <!--Logo text view -->
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/fightingspirit"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:scaleType="fitCenter"
        android:text="@string/txt_login"
        android:textColor="#DBE2EF"
        android:textSize="30sp"
        android:layout_below="@id/imgView_logo"/>

    <!--LinearLayout email&password -->
    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/tv_login"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:orientation="vertical">

        <!--LinearLayout email -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/img_account"
                android:src="@drawable/mail" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/et_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:textColor="#DBE2EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/img_lock"
                android:src="@drawable/lock" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingTop="10dp"
                    android:paddingRight="15dp"
                    android:textColor="#DBE2EF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:translationY="-15dp" />
                <!--Remember me?  marker
                    <RadioGroup
                        android:id="@+id/rd_box_remember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginEnd="40dp"
                        android:orientation="vertical">
                        <RadioButton
                            android:id="@+id/rd_remember"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/txt_remember_me"
                            android:textSize="15sp"
                            android:drawablePadding="20dp"
                            android:paddingStart="1dp"
                            android:paddingEnd="5dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="@drawable/radiobutton_color_selector"
                            android:buttonTint="@color/color_green_text"/>

                    </RadioGroup>
                    -->


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <!--Login Now Button -->
        <Button
            android:id="@+id/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-medium"
            android:onClick="confirmInput"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/btn_login_now"
            android:textAllCaps="false"
            android:textColor="#DBE2EF"
            android:textSize="16sp" />

        <!--OR CONTINUE WITH TEXT -->
        <TextView
            android:id="@+id/txt_continue_with"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/or_continue_with"
            android:textColor="@color/color_gray_text"
            android:textSize="15sp" />

        <!--LinearLayout ICONS SOCIAL MEDIA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/white_line"
                android:contentDescription="@string/whiteline1" />

            <ImageButton
                android:id="@+id/facebook_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/facebookicon"
                android:contentDescription="@string/btn_facebook" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/white_line"
                android:contentDescription="@string/whiteline2" />

            <ImageButton
                android:id="@+id/google_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/googleicon"
                android:contentDescription="@string/btn_google" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/white_line"
                android:contentDescription="@string/whiteline3" />

            <ImageButton
                android:id="@+id/instegram_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/instegramicon"
                android:contentDescription="@string/btn_instegram" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/white_line"
                android:contentDescription="@string/whiteline4" />
        </LinearLayout>
    </LinearLayout>


    <!--Sign Up&forgot Password -->
    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_signup_now"
            android:textAllCaps="true"
            android:textColor="@color/color_green_text"
            android:fontFamily="sans-serif"
            android:onClick="signUpButton"/>

        <Button
            android:id="@+id/forgot_pass"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/color_green_text"
            android:fontFamily="sans-serif"
            android:onClick="forgotPasswordButton"/>

    </RelativeLayout>


</RelativeLayout>