<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/background"
    tools:context=".ui.login.ConfirmPasswordActivity">

    <!--logo Image view -->
    <ImageView
        android:id="@+id/logo_reset_pass"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo1" />
    <!--Logo text view -->
    <TextView
        android:id="@+id/tv_gamer_finder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fightingspirit"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:paddingBottom="20dp"
        android:scaleType="fitCenter"
        android:textAllCaps="true"
        android:text="@string/GamerFinder"
        android:textColor="#DBE2EF"
        android:textSize="25sp"
        android:layout_below="@id/logo_reset_pass"/>
    <!-- /////////////////////// -->

    <!--Linlay_02 -->
    <LinearLayout
            android:id="@+id/Linlay_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_gamer_finder"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

            <ImageView
                android:id="@+id/iv_lock"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/lock"
                android:padding="8dp"
                android:tint="@color/colorAccent"
                />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="@string/et_password"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#DBE2EF"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    <!--Linlay_03 -->
    <LinearLayout
            android:id="@+id/Linlay_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Linlay_02"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

            <ImageView
                android:id="@+id/iv_lock_Confirm"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/lock"
                android:padding="8dp"
                android:tint="@color/colorAccent"
                />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/pass_conf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:hint="@string/et_password_confirm"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#DBE2EF"
                android:textSize="15sp"
                android:textStyle="bold"
                />

        </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    <!--Login Now Button -->
    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Linlay_03"
        android:text="@string/btn_restore"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:fontFamily="sans-serif-medium"
        android:textColor="#DBE2EF"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:textSize="13sp"
        android:onClick="btn_restore"
        />

</RelativeLayout>