<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.login.FavoriteGamesActivity">


    <!--High layer (Contain only logo and details text) -->
    <ImageView
        android:id="@+id/imgView_logo1"
        android:layout_width="260dp"
        android:layout_height="145dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/img_logo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/fightingspirit"
        android:paddingBottom="20dp"
        android:scaleType="fitCenter"
        android:text="@string/txt_favorite_games"
        android:textColor="#DBE2EF"
        android:textSize="25sp"
        android:layout_below="@id/imgView_logo1"/>


    <RelativeLayout
        android:id="@+id/gamesFaforiteId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_details">

        <!--Game Button -->
        <Button
            android:id="@+id/game1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/boxUser"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/starwarsicon" />

        <Button
            android:id="@+id/game2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sportfifaicon"
            android:layout_below="@+id/boxUser"
            android:layout_marginTop="20dp"
            android:layout_marginStart="145dp"/>

        <Button
            android:id="@+id/game3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/justcause2icon"
            android:layout_below="@+id/boxUser"
            android:layout_marginTop="20dp"
            android:layout_marginStart="270dp" />

        <Button
            android:id="@+id/game4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/game1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/callofdutyicon" />

        <Button
            android:id="@+id/game5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/assiasin"
            android:layout_below="@+id/game2"
            android:layout_marginTop="30dp"
            android:layout_marginStart="145dp"/>

        <Button
            android:id="@+id/game6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/game3"
            android:layout_marginStart="270dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/needforspeedicon" />

        <Button
            android:id="@+id/game7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/game4"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="35dp"
            android:background="@drawable/carsicon" />

        <Button
            android:id="@+id/game8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/dragonball"
            android:layout_below="@+id/game5"
            android:layout_marginTop="20dp"
            android:layout_marginVertical="35dp"
            android:layout_marginStart="145dp"/>

        <Button
            android:id="@+id/game9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/game6"
            android:layout_marginStart="270dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp"

            android:layout_marginVertical="35dp"
            android:background="@drawable/mortalkombaticon" />

    </RelativeLayout>
    <!-- Next and Back Buttons -->
    <RelativeLayout
        android:id="@+id/rellay_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="24dp"
        >

        <Button
            android:id="@+id/backId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/btn_back"
            android:layout_below="@+id/game7"
            android:textAllCaps="true"
            android:textColor="@color/cardview_light_background"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/doneId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif"
            android:text="@string/btn_done"
            android:textAllCaps="true"
            android:textColor="@color/cardview_light_background" />

    </RelativeLayout>

</RelativeLayout>